@@ -8,6 +8,7 @@
 	- thread keeps a scratchpad region for handling messages.
 	- writev used in netevent to write tcp length and data after another.
 	  This saves a roundtrip on tcp replies.
+	- test for one rrset updated in the cache.
 
 3 May 2007: Wouter
 	- fill refs. Use new parse and encode to answer queries.
